Set permsize for jdk 7